# 2025-advent-of-code

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/2025_advent_of_code/: 2025_advent_of_code.py  __init__.py
src/advent_of_code_2025/: advent_of_code_2025.py  day1.py  day2.py  day3.py  day6.py  day7.py  day9.py
tests/: test_day_2.py  test_day_6.py  test_day_7.py  test_day_9.py
